[package]
name = "ethereum"
version = "0.1.0"
authors = ["Tobin Harding <me@tobin.cc>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clarity = "0.4"
conquer-once = "0.3"
ethbloom = "0.9"
ethereum-types = "0.9"
hex = { version = "0.4", features = [ "serde" ] }
num = "0.3"
primitive-types = { version = "0.7", features = [ "serde" ] }
rand = "0.8"
reqwest = { version = "0.10", default-features = false, features = [ "json", "native-tls-vendored" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = [ "rt-threaded", "time", "macros", "sync" ] }
url = "2.2"

[dev-dependencies]
spectral = { version = "0.6", default-features = false }
