[package]
name = "ethereum"
version = "0.1.0"
authors = ["Tobin Harding <me@tobin.cc>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clarity = "0.4"
conquer-once = "0.3"
ethbloom = "0.9"
ethereum-types = "0.9"
hex = { version = "0.4", features = [ "serde" ] }
jsonrpc_client = { version = "0.5.1", features = ["macros", "reqwest"]}
num = "0.3"
primitive-types = { version = "0.7", features = [ "serde" ] }
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = [ "json" ]}
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
url = "2.2.1"

[dev-dependencies]
spectral = { version = "0.6", default-features = false }
