[package]
name = "ethereum"
version = "0.1.0"
authors = ["Tobin Harding <me@tobin.cc>"]
edition = "2018"

[dependencies]
anyhow = "1.0"                  # TODO: Move this to dev-dependencies.
async-trait = "0.1"
clarity = "0.4"
conquer-once = "0.3"
ethabi = "13.0.0"
ethbloom = "0.9"
ethereum-types = "0.10"
hex = { version = "0.4", features = [ "serde" ] }
jsonrpc_client = { version = "0.5.1", features = ["macros", "reqwest"]}
num = "0.3"                   # Not 0.4 because of clarity
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = [ "json" ]}
secp256k1 = "0.20.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0"
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
ureq = { version = "2.0.2", features = ["json"]}
url = "2.2.1"

[dev-dependencies]
hex-literal = "0.3.1"
spectral = { version = "0.6", default-features = false }
